--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="estilos.css">
    <title>A Cancela Verde</title>
   </head>
   <!-- body -->
@@ -12,6 +13,9 @@
    <p>Aquí é onde se abre <strong>a cancela verde</strong></p>
    <br>
    <a target="_blank" href="https://www.duckduckgo.com/" title="A páxina de inicio de Duckduckgo">Abre Duckduckgo</a>
+   <br>
+   <img src="verjanegra.jpg" alt="HTML5" style="width:128px;height:128px">
+   <br>
    <!-- table -->
    <table>
     <tr>
