--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- head -->
   <head>
    <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
    <link rel="stylesheet" href="estilos.css">
    <title>A Cancela Verde</title>
   </head>
