--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       </ul>
       <form>
         <input type="search" name="q" placeholder="Buscar">
-        <input type="submit" value="¡Vamos!">
+        <input type="submit" value="¡Veña!">
       </form>
     </nav>
    
    <main>
     <p>Aquí é onde se abre <strong>a cancela verde</strong></p>
    <br>
-   <a target="_blank" href="https://www.duckduckgo.com/" title="A páxina de inicio de Duckduckgo">Abre Duckduckgo</a>
+   <a target="_blank" href="https://duckduckgo.com/?q=a+cancela+verde" title="A páxina de inicio de Duckduckgo">Abre Duckduckgo</a>
    <br>
    <img src="verjanegra.jpg" alt="HTML5" style="width:128px;height:128px">
    <br>
