--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
     
     <footer>
-      <p>©Copyright 2021 de A Cancela Verde. Todos los derechos reservados :).</p>
+      <p>©Copyright 2021 de A Cancela Verde. Todo os dereitos reservados :).</p>
     </footer>
   </body>
 </html>
